--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
       </small>
     </div>
     <div class="col-xs-12 col-md-2">
-      <select [ngModel]="discussionSorting" (ngModelChange)="resort($event)"
+      <select [ngModel]="sorting" (ngModelChange)="resort($event)"
         class="form-control">
         <option disabled>Sorting</option>
         <option disabled>──────────</option>
