--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-10">
-      <app-community-card [community]="community" [editMode]="editMode()"></app-community-card>
+    <div class="col-xs-12" [class.col-md-10]="!editMode() && discussions.length > 0">
+      <app-community-card [community]="community" [editMode]="editMode()" (editing)="editing($event)"></app-community-card>
     </div>
-    <div class="col-xs-12 col-md-2">
+    <div *ngIf="!editMode() && discussions.length > 0" class="col-xs-12 col-md-2">
       <select [ngModel]="sorting" (ngModelChange)="resort($event)"
         class="form-control">
         <option disabled>Sorting</option>
