--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
       </small>
       <small>
         <ul *ngIf="popularCommunities" class="list-inline">trending communities:
-          <li class="tag tag-default list-inline-item"
+          <li class="tag tag-primary list-inline-item"
           *ngFor="let community of popularCommunities">
             <a class="link-unstyled" [routerLink]="['/community', community.id]">{{removeQuotes(community.name)}}</a>
           </li>
