--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="col-lg-11 col-xs-12">
   <div class="row">
     <div class="col-xs-12 col-md-10 trending-discussions">
       <h3>Trending Discussions</h3>
@@ -40,5 +40,5 @@
         [discussion]="discussion"></app-discussion-card>
     </div>
   </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
