--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,13 @@
 <toaster-container [toasterconfig]="toasterconfig"></toaster-container>
 <app-navbar></app-navbar>
 <br>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2 col-md-3 col-xs-12">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-lg-10 col-md-9 col-xs-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
